--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,5 @@ gestion_miembros/__init__.py
 gestion_miembros/migrations/__init__.py
 gestion_acentos/__init__.py
 gestion_acentos/migrations/__init__.py
+settings/__init__.py
+settings/migrations/__init__.py
